2003-07-23  Derek Price  <derek@ximbiot.com>

	* *.{c,h}: Back out the indent run.

2003-07-23  Derek Price  <derek@ximbiot.com>

	* cvs.h: Move some includes into lib/system.h.

2003-07-23  Derek Price  <derek@ximbiot.com>

	* *.{c,h}: Run these through GNU indent as per the NEWS file to fix
	some of the long function decls which came out of protoize.

2003-07-23  Derek Price  <derek@ximbiot.com>

	* *.c: Run these through GCC's protoize to convert the pre-ANSI C
	function decls to C89 compliance.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* cvs.h: Remove support for the PTR macro, since we can assume void *
	under C89.  It also was not being made use of in very many places so
	even most K&R compilers must have supported it, or nobody was using
	K&R compilers.  We can also assume <stdarg.h> under C89, but move the
	include...
	* error.c: ...here, de-macro VA_START, and...
	* subr.c: ...put a copy here too, as well as de-macroing VA_START.
	* history.c: s/PTR /void */g;
	* modules.c: Ditto.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* cvs.h: Include GNULIB exit.h.

2003-07-20  Derek Price  <derek@ximbiot.com>

	* server.c: Add PAM support.
	(cvs_pam_userinfo): New data type for PAM conversations.
	(cvs_pam_conv): New function.
	(check_password): Add PAM support.
	(Original patch from Brian Murphy <brian@murphy.dk>.)

2003-07-20  Derek Price  <derek@ximbiot.com>

	* wrapper.c: Remove mention of obsolete -f and -t wrapper options from
	a comment.

2003-07-18  Derek Price  <derek@ximbiot.com>

	* sanity.sh (release): Add new tests for release with unrecognized
	recognized directories.

2003-07-18  Derek Price  <derek@ximbiot.com>

	* vers_ts (Version_TS): Don't allow command line keyword expansion
	modes to override binary mode.
	* sanity.sh (): Tests for the above.
	(Original patch from Dieter Maurer <dieter@handshake.de>.)

2003-07-16  Derek Price  <derek@ximbiot.com>

	* add.c: s/PROTO//.
	* admin.c: Ditto.
	* annotate.c: Ditto.
	* buffer.c: Ditto.